Сверстал страницу с рестораном, настроил ссылки

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
   <header class="header">
     <div class="container">
       <div class="header-block">
-        <img src="img/logo.svg" alt="Logo" class="logo header__logo">
+        <a href="index.html"><img src="img/logo.svg" alt="Logo" class="logo header__logo"></a>
         <input type="text" class="input input__address" placeholder="Адрес доставки">
         <div class="buttons">
-          <button class="button buttons__login">Войти</button>
-          <button class="button buttons__shop">Корзина</button>
+          <button class="button buttons__login"><img src="img/header/login.svg" alt="" class="buttons__icon">Войти</button>
+          <button class="button buttons__shop"><img src="img/header/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
         </div>
         <!-- /.restaurants-heading -->
         <div class="cards">
-          <div class="card">
+          <a href="tanuki.html" class="card">
             <img src="img/restaurants/card-1.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -58,10 +58,10 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
 
-          <div class="card">
+          <a href="tanuki.html" class="card">
             <img src="img/restaurants/card-2.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -72,15 +72,15 @@
               <div class="card-info">
                 <div class="card__rating">4.5</div>
                 <div class="card__price">От 900 ₽</div>
-                <div class="card__category">Пицца</div>
+                <div class="card__category">Пицца и суши</div>
               </div>
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
 
-          <div class="card">
+          <a href="tanuki.html" class="card">
             <img src="img/restaurants/card-3.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -96,10 +96,10 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
 
-          <div class="card">
+          <a href="tanuki.html" class="card">
             <img src="img/restaurants/card-4.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -115,10 +115,10 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
 
-          <div class="card">
+          <a href="tanuki.html" class="card">
             <img src="img/restaurants/card-5.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -134,10 +134,10 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
 
-          <div class="card">
+          <a href="tanuki.html" class="card">
             <img src="img/restaurants/card-6.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -153,7 +153,7 @@
               <!-- /.card-info -->
             </div>
             <!-- /.card-text -->
-          </div>
+          </a>
           <!-- /.card -->
         </div>
       </div>
