Сверстал модульное окно, подключил библиотеки animate и wow

--- a/src/tanuki.html
+++ b/src/tanuki.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/main.css">
   <title>Delivery Food</title>
 </head>
@@ -13,11 +14,11 @@
   <header class="header">
     <div class="container">
       <div class="header-block">
-        <a href="index.html"><img src="img/logo.svg" alt="Logo" class="logo header__logo"></a>
+        <a href="index.html" class="logo header__logo"><img src="img/logo.svg" alt="Logo"></a>
         <input type="text" class="input input__address" placeholder="Адрес доставки">
         <div class="buttons">
-          <button class="button buttons__login"><img src="img/header/login.svg" alt="" class="buttons__icon">Войти</button>
-          <button class="button buttons__shop"><img src="img/header/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
+          <button class="button buttons__primary"><img src="img/header/login.svg" alt="" class="buttons__icon">Войти</button>
+          <button id="cart-button" class="button buttons__secondary"><img src="img/header/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
         </div>
       </div>
     </div>
@@ -38,7 +39,7 @@
         </div>
         <!-- /.restaurants-heading -->
         <div class="cards">
-          <div class="card">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
             <img src="img/tanuki/tanuki-1.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -50,7 +51,7 @@
               </div>
               <!-- /.card-info -->
               <div class="card-buttons">
-                <button class="button buttons__login">
+                <button class="button buttons__primary">
                   <span class="card-buttons__text">В корзину</span>
                   <img src="img/restaurants/shopping-card-white.svg" alt="" class="card-buttons__icon">
                 </button>
@@ -61,7 +62,7 @@
           </div>
           <!-- /.card -->
 
-          <div class="card">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
             <img src="img/tanuki/tanuki-2.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -73,7 +74,7 @@
               </div>
               <!-- /.card-info -->
               <div class="card-buttons">
-                <button class="button buttons__login">
+                <button class="button buttons__primary">
                   <span class="card-buttons__text">В корзину</span>
                   <img src="img/restaurants/shopping-card-white.svg" alt="" class="card-buttons__icon">
                 </button>
@@ -84,7 +85,7 @@
           </div>
           <!-- /.card -->
 
-          <div class="card">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
             <img src="img/tanuki/tanuki-3.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -96,7 +97,7 @@
               </div>
               <!-- /.card-info -->
               <div class="card-buttons">
-                <button class="button buttons__login">
+                <button class="button buttons__primary">
                   <span class="card-buttons__text">В корзину</span>
                   <img src="img/restaurants/shopping-card-white.svg" alt="" class="card-buttons__icon">
                 </button>
@@ -107,7 +108,7 @@
           </div>
           <!-- /.card -->
 
-          <div class="card">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
             <img src="img/tanuki/tanuki-4.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -119,7 +120,7 @@
               </div>
               <!-- /.card-info -->
               <div class="card-buttons">
-                <button class="button buttons__login">
+                <button class="button buttons__primary">
                   <span class="card-buttons__text">В корзину</span>
                   <img src="img/restaurants/shopping-card-white.svg" alt="" class="card-buttons__icon">
                 </button>
@@ -130,7 +131,7 @@
           </div>
           <!-- /.card -->
 
-          <div class="card">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
             <img src="img/tanuki/tanuki-5.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -142,7 +143,7 @@
               </div>
               <!-- /.card-info -->
               <div class="card-buttons">
-                <button class="button buttons__login">
+                <button class="button buttons__primary">
                   <span class="card-buttons__text">В корзину</span>
                   <img src="img/restaurants/shopping-card-white.svg" alt="" class="card-buttons__icon">
                 </button>
@@ -153,7 +154,7 @@
           </div>
           <!-- /.card -->
 
-          <div class="card">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
             <img src="img/tanuki/image.png" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -165,7 +166,7 @@
               </div>
               <!-- /.card-info -->
               <div class="card-buttons">
-                <button class="button buttons__login">
+                <button class="button buttons__primary">
                   <span class="card-buttons__text">В корзину</span>
                   <img src="img/restaurants/shopping-card-white.svg" alt="" class="card-buttons__icon">
                 </button>
@@ -204,5 +205,77 @@
   </footer>
   <!-- /.footer -->
 
+  <div class="modal">
+    <div class="modal-dialog">
+      <div class="modal-header">
+        <h3 class="modal__title">Корзина</h3>
+        <button class="close">&times;</button>
+      </div>
+
+      <div class="modal-food">
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+      </div>
+      <!-- /.modal-foot -->
+
+      <div class="modal-footer">
+        <span class="modal-footer__tag">1250 ₽</span>
+        <!-- /.modal-footer__tag -->
+        <div class="modal-footer__buttons">
+          <button class="button buttons__primary">Оформить заказ</button>
+          <button class="button">Отмена</button>
+        </div>
+        <!-- /.footer-buttons -->
+      </div>
+      <!-- /.modal-footer -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+  <script src="js/wow.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
