--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/main.css">
   <title>Delivery Food</title>
 </head>
@@ -13,11 +14,11 @@
   <header class="header">
     <div class="container">
       <div class="header-block">
-        <a href="index.html"><img src="img/logo.svg" alt="Logo" class="logo header__logo"></a>
+        <a href="index.html" class="logo header__logo"><img src="img/logo.svg" alt="Logo"></a>
         <input type="text" class="input input__address" placeholder="Адрес доставки">
         <div class="buttons">
-          <button class="button buttons__login"><img src="img/header/login.svg" alt="" class="buttons__icon">Войти</button>
-          <button class="button buttons__shop"><img src="img/header/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
+          <button class="button buttons__primary"><img src="img/header/login.svg" alt="" class="buttons__icon">Войти</button>
+          <button id="cart-button" class="button buttons__secondary"><img src="img/header/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
         </div>
       </div>
     </div>
@@ -42,7 +43,7 @@
         </div>
         <!-- /.restaurants-heading -->
         <div class="cards">
-          <a href="tanuki.html" class="card">
+          <a href="tanuki.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
             <img src="img/restaurants/card-1.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -61,7 +62,7 @@
           </a>
           <!-- /.card -->
 
-          <a href="tanuki.html" class="card">
+          <a href="tanuki.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
             <img src="img/restaurants/card-2.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -80,7 +81,7 @@
           </a>
           <!-- /.card -->
 
-          <a href="tanuki.html" class="card">
+          <a href="tanuki.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
             <img src="img/restaurants/card-3.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -99,7 +100,7 @@
           </a>
           <!-- /.card -->
 
-          <a href="tanuki.html" class="card">
+          <a href="tanuki.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
             <img src="img/restaurants/card-4.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -118,7 +119,7 @@
           </a>
           <!-- /.card -->
 
-          <a href="tanuki.html" class="card">
+          <a href="tanuki.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
             <img src="img/restaurants/card-5.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -137,7 +138,7 @@
           </a>
           <!-- /.card -->
 
-          <a href="tanuki.html" class="card">
+          <a href="tanuki.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
             <img src="img/restaurants/card-6.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
@@ -184,5 +185,77 @@
   </footer>
   <!-- /.footer -->
 
+  <div class="modal">
+    <div class="modal-dialog">
+      <div class="modal-header">
+        <h3 class="modal__title">Корзина</h3>
+        <button class="close">&times;</button>
+      </div>
+
+      <div class="modal-food">
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+        <div class="modal-food__row">
+          <span class="modal-food__name">Ролл угорь стандарт</span>
+          <strong class="modal-food__price">250 ₽</strong>
+          <div class="modal-food__counter">
+            <button class="modal-food__counter__button">-</button>
+            <span class="modal-food__counter__text">1</span>
+            <button class="modal-food__counter__button">+</button>
+          </div>
+        </div>
+      </div>
+      <!-- /.modal-foot -->
+
+      <div class="modal-footer">
+        <span class="modal-footer__tag">1250 ₽</span>
+        <!-- /.modal-footer__tag -->
+        <div class="modal-footer__buttons">
+          <button class="button buttons__primary">Оформить заказ</button>
+          <button class="button">Отмена</button>
+        </div>
+        <!-- /.footer-buttons -->
+      </div>
+      <!-- /.modal-footer -->
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+  <script src="js/wow.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
