--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Delivery Food</title>
+  <title>PizzaBurger — доставка еды на дом</title>
 </head>
 <body>
 
@@ -18,144 +18,167 @@
         <input type="text" class="input input__address" placeholder="Адрес доставки">
         <div class="buttons">
           <button class="button buttons__primary buttons__login"><img src="img/icons/login.svg" alt="" class="buttons__icon">Войти</button>
-          <button id="cart-button" class="button buttons__cart"><img src="img/icons/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
-          <button class="button buttons__primary buttons__logout"><img src="img/icons/logout.svg" alt="" class="buttons__icon">Выйти</button>
+          <button id="cart-button" class="button"><img src="img/icons/shopping-cart.svg" alt="" class="buttons__icon">Корзина</button>
         </div>
       </div>
     </div>
   </header>
 
   <main>
-    <section class="promo">
-      <div class="container">
-        <div class="promo-block">
-          <h1 class="promo__title">Онлайн-сервис <br> доставки еды на дом</h1>
-          <p class="promo-text">Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком</p>
-        </div>
-      </div>
-    </section>
   
-    <section class="restaurants">
+    <section class="menu">
       <div class="container">
-        <div class="restaurants-heading">
-          <h2 class="restaurants__title">Рестораны</h2>
+        <div class="menu-heading">
+          <h2 class="menu__title">Пицца Плюс</h2>
           <!-- /.restaurants__title -->
-          <input type="text" class="input input__search" placeholder="Поиск блюд и ресторанов">
+          <div class="card-info">
+            <div class="card__rating">4.5</div>
+            <div class="card__price">От 900 ₽</div>
+            <div class="card__category">Пицца</div>
+          </div>
         </div>
         <!-- /.restaurants-heading -->
         <div class="cards">
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
-            <img src="img/pizza-plus/preview.jpg" alt="restaurant" class="card__img">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
+            <img src="img/pizza-plus/pizza-vesuvius.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
-                <h3 class="card__title">Пицца плюс</h3>
-                <div class="card__tag">50 мин</div>
+                <h3 class="card__title card__title_reg">Пицца Везувий</h3>
               </div>
               <!-- /.card-heading -->
               <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 900 ₽</div>
-                <div class="card__category">Пицца</div>
+                <div class="card__ingridients">Соус томатный, сыр «Моцарелла», ветчина, пепперони, перец
+                  «Халапенье», соус «Тобаско», томаты.</div>
               </div>
               <!-- /.card-info -->
+              <div class="card-buttons">
+                <button class="button buttons__primary">
+                  <span class="card-buttons__text">В корзину</span>
+                  <img src="img/icons/shopping-card-white.svg" alt="" class="card-buttons__icon">
+                </button>
+                <strong class="card__price_bold">545 ₽</strong>
+              </div>
             </div>
             <!-- /.card-text -->
-          </a>
+          </div>
           <!-- /.card -->
 
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
-            <img src="img/tanuki/preview.jpg" alt="restaurant" class="card__img">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+            <img src="img/pizza-plus/pizza-girls.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
-                <h3 class="card__title">Тануки</h3>
-                <div class="card__tag">60 мин</div>
+                <h3 class="card__title card__title_reg">Пицца Девичник</h3>
               </div>
               <!-- /.card-heading -->
               <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 1200 ₽</div>
-                <div class="card__category">Суши, роллы</div>
+                <div class="card__ingridients">Соус томатный, постное тесто, нежирный сыр, кукуруза, лук, маслины,
+                  грибы, помидоры, болгарский перец.</div>
               </div>
               <!-- /.card-info -->
+              <div class="card-buttons">
+                <button class="button buttons__primary">
+                  <span class="card-buttons__text">В корзину</span>
+                  <img src="img/icons/shopping-card-white.svg" alt="" class="card-buttons__icon">
+                </button>
+                <strong class="card__price_bold">450 ₽</strong>
+              </div>
             </div>
             <!-- /.card-text -->
-          </a>
+          </div>
           <!-- /.card -->
 
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
-            <img src="img/food-band/preview.jpg" alt="restaurant" class="card__img">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+            <img src="img/pizza-plus/pizza-oleole.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
-                <h3 class="card__title">FoodBand</h3>
-                <div class="card__tag">40 мин</div>
+                <h3 class="card__title card__title_reg">Пицца Оле-Оле</h3>
               </div>
               <!-- /.card-heading -->
               <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 450 ₽</div>
-                <div class="card__category">Пицца</div>
+                <div class="card__ingridients">Соус томатный, сыр «Моцарелла», черри, маслины, зелень, майонез</div>
               </div>
               <!-- /.card-info -->
+              <div class="card-buttons">
+                <button class="button buttons__primary">
+                  <span class="card-buttons__text">В корзину</span>
+                  <img src="img/icons/shopping-card-white.svg" alt="" class="card-buttons__icon">
+                </button>
+                <strong class="card__price_bold">440 ₽</strong>
+              </div>
             </div>
             <!-- /.card-text -->
-          </a>
+          </div>
           <!-- /.card -->
 
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-            <img src="img/palki-skalki/preview.jpg" alt="restaurant" class="card__img">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
+            <img src="img/pizza-plus/pizza-plus.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
-                <h3 class="card__title">Палки-скалки</h3>
-                <div class="card__tag">55 мин</div>
+                <h3 class="card__title card__title_reg">Пицца Плюс</h3>
               </div>
               <!-- /.card-heading -->
               <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 500 ₽</div>
-                <div class="card__category">Пицца и суши</div>
+                <div class="card__ingridients">Соус томатный, сыр «Моцарелла», сыр «Чеддер», томаты, пепперони,
+                  телятина, грибы, бекон, болгарский перец.</div>
               </div>
               <!-- /.card-info -->
+              <div class="card-buttons">
+                <button class="button buttons__primary">
+                  <span class="card-buttons__text">В корзину</span>
+                  <img src="img/icons/shopping-card-white.svg" alt="" class="card-buttons__icon">
+                </button>
+                <strong class="card__price_bold">805 ₽</strong>
+              </div>
             </div>
             <!-- /.card-text -->
-          </a>
+          </div>
           <!-- /.card -->
 
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
-            <img src="img/gusi-lebedi/preview.jpg" alt="restaurant" class="card__img">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
+            <img src="img/pizza-plus/pizza-hawaiian.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
-                <h3 class="card__title">Гуси Лебеди</h3>
-                <div class="card__tag">75 мин</div>
+                <h3 class="card__title card__title_reg">Пицца Гавайская</h3>
               </div>
               <!-- /.card-heading -->
               <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 1000 ₽</div>
-                <div class="card__category">Русская кухня</div>
+                <div class="card__ingridients">Соус томатный, сыр «Моцарелла», ветчина, ананасы</div>
               </div>
               <!-- /.card-info -->
+              <div class="card-buttons">
+                <button class="button buttons__primary">
+                  <span class="card-buttons__text">В корзину</span>
+                  <img src="img/icons/shopping-card-white.svg" alt="" class="card-buttons__icon">
+                </button>
+                <strong class="card__price_bold">440 ₽</strong>
+              </div>
             </div>
             <!-- /.card-text -->
-          </a>
+          </div>
           <!-- /.card -->
 
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
-            <img src="img/pizza-burger/preview.jpg" alt="restaurant" class="card__img">
+          <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
+            <img src="img//pizza-plus/pizza-classic.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
               <div class="card-heading">
-                <h3 class="card__title">PizzaBurger</h3>
-                <div class="card__tag">45 мин</div>
+                <h3 class="card__title card__title_reg">Пицца Классика</h3>
               </div>
               <!-- /.card-heading -->
               <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 700 ₽</div>
-                <div class="card__category">Пицца</div>
+                <div class="card__ingridients">Соус томатный, сыр «Моцарелла», сыр «Пармезан», ветчина, салями,
+                  грибы.</div>
               </div>
               <!-- /.card-info -->
+              <div class="card-buttons">
+                <button class="button buttons__primary">
+                  <span class="card-buttons__text">В корзину</span>
+                  <img src="img/icons/shopping-card-white.svg" alt="" class="card-buttons__icon">
+                </button>
+                <strong class="card__price_bold">510 ₽</strong>
+              </div>
             </div>
             <!-- /.card-text -->
-          </a>
+          </div>
           <!-- /.card -->
         </div>
       </div>
