--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -209,11 +209,11 @@
   </footer>
   <!-- /.footer -->
 
-  <div class="modal">
+  <div class="modal-cart">
     <div class="modal-dialog">
       <div class="modal-header">
         <h3 class="modal__title">Корзина</h3>
-        <button class="close">&times;</button>
+        <button class="close close-cart">&times;</button>
       </div>
 
       <div class="modal-food">
@@ -278,7 +278,34 @@
     </div>
     <!-- /.modal-dialog -->
   </div>
-  <!-- /.modal -->
+
+  <div class="modal-auth">
+		<div class="modal-dialog modal-login">
+			<button class="close close-login">&times;</button>
+			<form id="loginForm">
+				<fieldset class="modal-body">
+					<legend class="modal__title">Авторизация</legend>
+					<label class="label-login">
+						<span>Логин</span>
+						<input id="login" type="text">
+					</label>
+					<label class="label-login">
+						<span>Пароль</span>
+						<input id="password" type="password">
+					</label>
+				</fieldset>
+				<!-- /.modal-body -->
+				<div class="modal-footer">
+					<div class="footer-buttons">
+						<button class="button buttons__primary buttons__login" type="submit">Войти</button>
+					</div>
+				</div>
+			</form>
+			<!-- /.modal-footer -->
+		</div>
+		<!-- /.modal-dialog -->
+  </div>
+  
   <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
