Сейв перед удалением

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <input type="text" class="input input__search" placeholder="Поиск блюд и ресторанов">
         </div>
         <!-- /.restaurants-heading -->
-        <div class="cards">
+        <div class="cards restaurants-cards">
           <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
             <img src="img/pizza-plus/preview.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
