--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <!-- /.restaurants-heading -->
-        <div class="cards">
+        <div class="cards menu-cards">
           <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
             <img src="img/pizza-plus/pizza-vesuvius.jpg" alt="restaurant" class="card__img">
             <div class="card-text">
