Реализовал добавление карточек ресторанов и товаров при помощи js

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -184,7 +184,7 @@
       </div>
       <!-- /.container -->
     </section>
-    <!-- /.restaurants -->
+    <!-- /.menu -->
   </main>
   
   <footer class="footer">
