--- a/src/index.html
+++ b/src/index.html
@@ -45,124 +45,31 @@
         </div>
         <!-- /.restaurants-heading -->
         <div class="cards restaurants-cards">
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
-            <img src="img/pizza-plus/preview.jpg" alt="restaurant" class="card__img">
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card__title">Пицца плюс</h3>
-                <div class="card__tag">50 мин</div>
-              </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 900 ₽</div>
-                <div class="card__category">Пицца</div>
-              </div>
-              <!-- /.card-info -->
-            </div>
-            <!-- /.card-text -->
-          </a>
-          <!-- /.card -->
-
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
-            <img src="img/tanuki/preview.jpg" alt="restaurant" class="card__img">
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card__title">Тануки</h3>
-                <div class="card__tag">60 мин</div>
-              </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 1200 ₽</div>
-                <div class="card__category">Суши, роллы</div>
-              </div>
-              <!-- /.card-info -->
-            </div>
-            <!-- /.card-text -->
-          </a>
-          <!-- /.card -->
-
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
-            <img src="img/food-band/preview.jpg" alt="restaurant" class="card__img">
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card__title">FoodBand</h3>
-                <div class="card__tag">40 мин</div>
-              </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 450 ₽</div>
-                <div class="card__category">Пицца</div>
-              </div>
-              <!-- /.card-info -->
-            </div>
-            <!-- /.card-text -->
-          </a>
-          <!-- /.card -->
-
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-            <img src="img/palki-skalki/preview.jpg" alt="restaurant" class="card__img">
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card__title">Палки-скалки</h3>
-                <div class="card__tag">55 мин</div>
-              </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 500 ₽</div>
-                <div class="card__category">Пицца и суши</div>
-              </div>
-              <!-- /.card-info -->
-            </div>
-            <!-- /.card-text -->
-          </a>
-          <!-- /.card -->
-
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
-            <img src="img/gusi-lebedi/preview.jpg" alt="restaurant" class="card__img">
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card__title">Гуси Лебеди</h3>
-                <div class="card__tag">75 мин</div>
-              </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 1000 ₽</div>
-                <div class="card__category">Русская кухня</div>
-              </div>
-              <!-- /.card-info -->
-            </div>
-            <!-- /.card-text -->
-          </a>
-          <!-- /.card -->
-
-          <a href="restaurant.html" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
-            <img src="img/pizza-burger/preview.jpg" alt="restaurant" class="card__img">
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card__title">PizzaBurger</h3>
-                <div class="card__tag">45 мин</div>
-              </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="card__rating">4.5</div>
-                <div class="card__price">От 700 ₽</div>
-                <div class="card__category">Пицца</div>
-              </div>
-              <!-- /.card-info -->
-            </div>
-            <!-- /.card-text -->
-          </a>
-          <!-- /.card -->
+          
         </div>
       </div>
       <!-- /.container -->
     </section>
     <!-- /.restaurants -->
+    <section class="menu hide">
+      <div class="container">
+        <div class="menu-heading">
+          <h2 class="menu__title">Пицца Плюс</h2>
+          <!-- /.restaurants__title -->
+          <div class="card-info">
+            <div class="card__rating">4.5</div>
+            <div class="card__price">От 900 ₽</div>
+            <div class="card__category">Пицца</div>
+          </div>
+        </div>
+        <!-- /.restaurants-heading -->
+        <div class="cards menu-cards">
+          
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.menu -->
   </main>
   
   <footer class="footer">
