Написал функционал корзины

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
         <!-- /.modal-footer__tag -->
         <div class="modal-footer__buttons">
           <button class="button buttons__primary">Оформить заказ</button>
-          <button class="button">Отмена</button>
+          <button class="button clear-cart">Отмена</button>
         </div>
         <!-- /.footer-buttons -->
       </div>
